verilog: analog_to_pwm: fix typo in the Makefile & remove incorrect information in the readme.md
1. ${PLL_FNAME}.v is a rudiment of the copy-paste process.
2. RC cutoff frequency may affect the sample rate, not the bandwidth.

--- a/verilog/analog_to_pwm/Makefile
+++ b/verilog/analog_to_pwm/Makefile
@@ -70,6 +70,6 @@ dfu: ${PROJ}.dfu
 	dfu-suffix -v 1209 -p 5af0 -a $@
 
 clean:
-	$(RM) -f ${PROJ}.bit ${PROJ}_out.config ${PROJ}.json ${PROJ}.dfu ${PLL_FNAME}.v
+	$(RM) -f ${PROJ}.bit ${PROJ}_out.config ${PROJ}.json ${PROJ}.dfu
 
 .PHONY: prog clean
